# AUTOMATIC_DATASET

./: .gitignore  README.md  pyproject.toml
Code/: signal_cleaning.py  utilities.py  visualization.py
Examples/: cleaning.ipynb  preparing_for_analysis.ipynb
